# skos-agent

./: main.py  pyproject.toml  requirements.txt  run.py
output/: skos_concept_scheme.ttl
skos_agent/: config.py  graph.py
skos_agent/nodes/: extract_concepts.py  generate_skos.py  rank_concepts.py  read_document.py  split_text.py  write_ttl.py
